# endfield-AIC-simulation-v2

./: .gitignore  AGENTS.md  README.md  pyproject.toml  server.ps1
assets/: unit_metadata.json
design/: 4-stage-tick.md  8-stage-tick.md
docs/: index.html  search.js  simulation.html
docs/simulation/: _enums.html  _id_gen.html  _types.html  factory.html  graph.html  items.html  layout.html  mappings.html  placement.html  units.html  utils.html
docs/simulation/items/: inventory.html  item.html  itemstack.html
docs/simulation/units/: base.html  depot_access.html  logistics_units.html  (+2 more)
expr_results/: expr_1.txt  expr_stash_result.txt
frontend/: README.md  package-lock.json  package.json  server.py  tsconfig.json
frontend/static/: index.html
simulation/: __init__.py  _enums.py  _id_gen.py  _types.py  component_pool.py  engine.py  factory.py  graph.py  layout.py  mappings.py  placement.py
simulation/items/: __init__.py  inventory.py  item.py  itemstack.py
simulation/units/: __init__.py  base.py  mappings.py
simulation/utils/: __init__.py  area.py  coverage.py  vec.py
tests/: README.md  _view.py  assertion_engine.py  conftest.py  mocks.py  test_converger.py  test_converger_claim.py  test_conveyor.py  test_protocol_stash.py  test_runner.py  test_splitter.py
tests/test_cases/: A.json  B.json  belt_accumulate.json  belt_line.json  belt_turn.json  converger_line.json  loader_unloader.json  priority_output.json  protocol_stash.json  protocol_stash_two_inputs.json  splitter_line.json
tools/: migrate_ticks.py  runner.py  topo_view.py  visualize.py
(+101 files in other folders)
