[project]
name = "simulation-v2"
version = "0.1.0"
description = "Grid-based factory simulation with two-phase tick loop, bilateral port matching, and a web-based canvas viewer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "graphviz>=0.21",
    "json5>=0.10.0",
    "mypy>=2.1.0",
    "pdoc>=16.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "uvicorn>=0.47.0",
]

[tool.pdoc]
docformat = "google"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
